# ob-operator-mcp-server

./: .gitignore  README-CN.md  README.md  go.mod  main.py  makefile  pyproject.toml  readme.md
.github/workflows/: push_pr.yml
cmd/: main.go
okctl/: __init__.py  backup_policy.py  clusters.py  components.py  tenants.py  utils.py
pkg/functions/: obclusters.go  tools.go
pkg/okctl/: obclusters.go  tools.go  update_components.go
pkg/toolsets/: toolsets.go
src/okctl/: __init__.py  server.py
src/okctl/tools/: backup_policy.py  clusters.py  components.py  install.py  sql.py  tenants.py
src/okctl/utils/: errors.py
tests/: test_server.py
