[project]
name = "okctl-mcp-server"
version = "0.1.0"
description = "OceanBase cluster management tool MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.2.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pylint>=2.17.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build]
packages = ["src/okctl"]
